# skunkworks-projective-geometry

./: .pre-commit-config.yaml  pyproject.toml
projective_geometry/: __main__.py
projective_geometry/camera/: camera.py  camera2.py  camera_params.py  camera_pose.py  geometry.py
projective_geometry/projection/: projectors.py
projective_geometry/retrieval/intrinsics/: README.md
projective_geometry/solvers/: arun.py  p4p_solver.py
projective_geometry/utils/: rotation.py
projective_geometry/visualization/: virtual_trajectory.py
