[tool.poetry]
name = "projective_geometry"
version = "0.1.0"
description = "Educational package to learn how different geometric features are projected under homography transforms"
authors = ["Inaki Rabanillo <lanza241>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.6"
opencv-python = "^4.11.0"
scipy = "^1.15.3"
typer = "^0.16.0"
pre-commit = "^4.2.0"
pyqt6 = "^6.9.0"
rerun-sdk = { version = "^0.23.3", optional = true }

[tool.poetry.group.dev.dependencies]
mypy = "^1.2"

[tool.poetry.extras]
rerun = ["rerun-sdk"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
